# lager-app

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260411_01_initial_schema.py  20260411_02_inventory_module.py  20260411_03_erp_transfer_requests.py  20260411_04_erp_transfer_approval_fields.py  20260411_05_audit_log_event_fields.py  20260411_06_photos_table.py  20260411_07_comments_table.py  20260415_08_app_orders_external_order_id.py  20260415_10_app_orders_customer_due.py
backend/src/: main.py
backend/src/application/: __init__.py  dtos.py  errors.py
backend/src/config/: settings.py
backend/src/domain/: __init__.py  entities.py  material_pipeline.py  order_plan_cutting.py  services.py  value_objects.py
backend/src/ports/: __init__.py  admin_configuration_port.py  audit_log_port.py  auth_identity_port.py  auth_token_port.py  comment_repository_port.py  erp_authentication_port.py  erp_configuration_port.py  erp_material_port.py  erp_order_link_port.py  erp_order_port.py  erp_transfer_repository_port.py  erp_write_port.py  file_storage_port.py  inventory_repository_port.py  material_lookup_port.py  material_plan_availability_port.py  order_repository_port.py  password_hasher_port.py  photo_repository_port.py  stock_snapshot_port.py
backend/src/scripts/: __init__.py  seed_demo_data.py
backend/tests/api/: test_admin_api.py  test_audit_api.py  test_auth_api.py  test_comment_api.py  test_dashboard_api.py  test_erp_read_api.py  (+7 more)
(+204 files in other folders)
